--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
 	"devDependencies": {
 		"@commitlint/cli": "^16.1.0",
 		"@commitlint/config-conventional": "^16.0.0",
+		"@types/lodash.shuffle": "^4.2.6",
 		"husky": "^7.0.4",
 		"prettier": "^2.5.1",
 		"release-it": "^14.12.4",
 		"tsup": "^5.11.13",
 		"typescript": "^4.5.5"
+	},
+	"dependencies": {
+		"lodash.shuffle": "^4.2.0"
 	}
 }
