--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"lib": ["ES2019", "DOM"],
 		"declaration": true,
 		"declarationMap": true,
-		"moduleResolution": "node"
+		"moduleResolution": "node",
+		"esModuleInterop": true
 	}
 }
